--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ main{
 }
 
 #create{
-    display: none;
+    /*display: none;*/
 }
 
 #group, #product{
@@ -83,7 +83,7 @@ main{
 }
 
 #product{
-    display: none;
+    /*display: none;*/
 }
 
 #group span, #product span{
@@ -100,7 +100,7 @@ main{
 }
 
 #view{
-    display: none;
+    /*display: none;*/
     align-items: flex-end;
     gap: 24px;
 }
@@ -127,4 +127,107 @@ main{
     color: #757575;
     padding: 10px;
     border-radius: 8px;
+}
+
+@media(max-width: 1220px){
+    #product div{
+        flex-wrap: wrap;
+        margin-bottom: 50px;
+        justify-content: space-between;
+        justify-items: flex-end;
+        gap: 20px;
+    }
+}
+@media(max-width: 850px){
+    h1{
+        font-size: 38px;
+    }
+    
+    h2{
+        font-size: 25px;
+    }
+    
+    h3{
+        font-size: 18px;
+    }
+
+    main{
+        height: auto;
+        flex-direction: column;
+    }
+
+    #create, #view{
+        width: 100%;
+    }
+
+    #product div{
+        flex-wrap: wrap;
+    }
+    nav button{
+        width: 220px;
+        height: 50px;
+        font-size: 20px;
+    }
+}
+@media(max-width: 500px){
+    h1{
+        font-size: 30px;
+    }
+
+    h2{
+        font-size: 20px;
+    }
+    
+    h3{
+        font-size: 14px;
+    }
+    
+    nav button{
+        width: 180px;
+        height: 40px;
+        font-size: 15px;
+    }
+}
+
+@media(max-width: 420px){
+    h1{
+        margin-top: 30px;
+        font-size: 25px;
+    }
+
+    h2{
+        font-size: 15px;
+    }
+    
+    h3{
+        font-size: 11px;
+    }
+
+    header{
+        height: auto;
+    }
+    
+    nav{
+        flex-direction: column;
+        align-items: center;
+        margin-top: 30px;
+        gap: 30px;
+    }
+
+    #create, #view{
+        padding: 30px 15px;
+    }
+
+    #group div{
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+
+    #group span, #product span{
+        font-size: 10px;
+    }
+    
+    input, select, button{
+        font-size: 10px;
+    }
 }
