--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ main{
 }
 
 #create{
-    /*display: none;*/
+    display: none;
 }
 
 #group, #product{
@@ -83,7 +83,7 @@ main{
 }
 
 #product{
-    /*display: none;*/
+    display: none;
 }
 
 #group span, #product span{
@@ -100,7 +100,7 @@ main{
 }
 
 #view{
-    /*display: none;*/
+    display: none;
     align-items: flex-end;
     gap: 24px;
 }
